tests/ui/parser/removed-syntax/removed-syntax-static-fn.stderr
error: expected identifier, found keyword `fn`
  --> $DIR/removed-syntax-static-fn.rs:4:12
   |
LL |     static fn f() {}
   |            ^^ expected identifier, found keyword

error: expected one of `:`, `;`, or `=`, found `f`
  --> $DIR/removed-syntax-static-fn.rs:4:15
   |
LL | impl S {
   |        - while parsing this item list starting here
LL |     static fn f() {}
   |               ^ expected one of `:`, `;`, or `=`
...
LL | }
   | - the item list ends here

error: missing type for `static` item
  --> $DIR/removed-syntax-static-fn.rs:4:14
   |
LL |     static fn f() {}
   |              ^
   |
help: provide a type for the item
   |
LL |     static fn: <type> f() {}
   |              ++++++++

error: aborting due to 3 previous errors

